# auth

./: CMakeLists.txt  README.md  auth-scm-1.rockspec  auth.lua  config.ld
auth/: querystring.lua
auth/strategy/: local.lua  telegram.lua
test/integration/: local_strategy_test.lua  telegram_strategy_test.lua
